# git-remote-k8s

./: Cargo.toml  README.md  git-remote-k8s.sh
src/: main.rs  test.rs
