[package]
name = "git-remote-k8s"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive", "env"] }
config = "0.13.3"
futures = "0.3.29"
k8s-openapi = { version = "0.20.0", features = ["v1_27"] }
kube = { version = "0.86.0", features = ["ws"] }
once_cell = "1.18.0"
regex = "1.10.2"
scopeguard = "1.2.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["rt", "tokio-macros", "macros", "rt-multi-thread", "io-std", "io-util"] }
tokio-util = { version = "0.7.10", features = ["io-util"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = "0.3.17"
url = "2.4.1"
